Closed Bug 185750 Opened 22 years ago Closed 19 years ago

Font palette accessible when it should not

Categories

(Camino Graveyard :: Preferences, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stf, Assigned: sfraser_bugs)

Details

Open the Font pane in Preferences
Click on the Monospace round button to show the Font palette, leave it opened
Click on Advanced
Use the Tabulation key to select for example Fantasy, it has the blue focus
Click another font in the Font palette
Close the Font palette and the Advanced sheet

Monospace font has been changed, not Fantasy which will be confusing.
Of course the Advanced fonts must be changed via their own popup.

Either hide the Font palette when Advanced sheet is visible.
Perhaps the Font palette should also be closed when the preferences is closed
and the preferences tab is changed to something else than the Fonts tab.
But I think it's against AAHIG.
The Font palette is also 'useless' because only the Font Family (Times) and Size
are stored, not the Typeface (Regular, etc) of course.

Or use another layout for the Fonts dialog, see Bug 184102.
Josh please take a look while you are working on the font panel.
Assignee: sfraser → joshmoz
Ping.

Since no one seems to have looked at this in a while, I'm pinging it and CCing
Mike as well. I definitely see the problem. Can someone check this out? How hard
is it to fix?
Assignee: joshmoz → sfraser_bugs
I checked in a change to hide the font panel when showing the Advanced font
dialog. Ugly, but we'll have to live with it until we resolve the larger font
pref issues.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.