Fix bug 185750: when showing the Advanced font prefs, hide the font panel (and make sure that changeFont: notifications don't change the selected fonts in the main panel).